Fix logs on small screens

--- a/src/app/modules/main/container/static/styles/logs.css
+++ b/src/app/modules/main/container/static/styles/logs.css
@@ -1,9 +1,3 @@
-.log-box {
-    padding: 1rem;
-    background-color: black;
-    border-radius: 10px;
-}
-
 #log-textarea {
     width: 100%;
     height: 100%;
